--- a/babybuddy/templates/babybuddy/welcome.html
+++ b/babybuddy/templates/babybuddy/welcome.html
@@ -20,7 +20,7 @@
         <div class="card-deck">
             <div class="card card-diaperchange">
                 <div class="card-header text-center">
-                    <i class="icon icon-2x icon-diaperchange" aria-hidden="true"></i>
+                    <i class="icon-2x icon-diaperchange" aria-hidden="true"></i>
                 </div>
                 <div class="card-body">
                     <h3 class="card-title text-center">{% trans "Diaper Changes" %}</h3>
@@ -28,7 +28,7 @@
             </div>
             <div class="card card-feeding">
                 <div class="card-header text-center">
-                    <i class="icon icon-2x icon-feeding" aria-hidden="true"></i>
+                    <i class="icon-2x icon-feeding" aria-hidden="true"></i>
                 </div>
                 <div class="card-body">
                     <h3 class="card-title text-center">{% trans "Feedings" %}</h3>
@@ -36,7 +36,7 @@
             </div>
             <div class="card card-sleep">
                 <div class="card-header text-center">
-                    <i class="icon icon-2x icon-sleep" aria-hidden="true"></i>
+                    <i class="icon-2x icon-sleep" aria-hidden="true"></i>
                 </div>
                 <div class="card-body">
                     <h3 class="card-title text-center">{% trans "Sleep" %}</h3>
@@ -44,7 +44,7 @@
             </div>
             <div class="card card-tummytime">
                 <div class="card-header text-center">
-                    <i class="icon icon-2x icon-tummytime" aria-hidden="true"></i>
+                    <i class="icon-2x icon-tummytime" aria-hidden="true"></i>
                 </div>
                 <div class="card-body">
                     <h3 class="card-title text-center">{% trans "Tummy Time" %}</h3>
@@ -65,7 +65,7 @@
         <p class="text-center">
             {% if perms.core.add_child %}
                 <a href="{% url 'core:child-add' %}" class="btn btn-lg btn-success">
-                    <i class="icon icon-child" aria-hidden="true"></i> {% trans "Add a Child" %}
+                    <i class="icon-child" aria-hidden="true"></i> {% trans "Add a Child" %}
                 </a>
             {% endif %}
         </p>
