--- a/babybuddy/templates/registration/login.html
+++ b/babybuddy/templates/registration/login.html
@@ -13,7 +13,7 @@
         </label>
         <div class="input-group mb-3 fade-in">
             <div class="input-group-prepend">
-                <span class="input-group-text"><i class="icon icon-user" aria-hidden="true"></i></span>
+                <span class="input-group-text"><i class="icon-user" aria-hidden="true"></i></span>
             </div>
             {% render_field form.username name='username' class+='form-control' id='username-input-group' placeholder=form.username.label %}
         </div>
@@ -23,7 +23,7 @@
         </label>
         <div class="input-group mb-3 fade-in">
             <div class="input-group-prepend">
-                <span class="input-group-text"><i class="icon icon-lock" aria-hidden="true"></i></span>
+                <span class="input-group-text"><i class="icon-lock" aria-hidden="true"></i></span>
             </div>
             {% render_field form.password name='password' class+='form-control' id='password-input-group' placeholder=form.password.label %}
         </div>
