--- a/babybuddy/templates/registration/password_reset_confirm.html
+++ b/babybuddy/templates/registration/password_reset_confirm.html
@@ -27,7 +27,7 @@
         </label>
         <div class="input-group mb-3 fade-in">
             <div class="input-group-prepend">
-                <span class="input-group-text"><i class="icon icon-lock" aria-hidden="true"></i></span>
+                <span class="input-group-text"><i class="icon-lock" aria-hidden="true"></i></span>
             </div>
             {% render_field form.new_password1 name='new_password1' class+='form-control' id='password1-input-group' %}
         </div>
@@ -37,7 +37,7 @@
         </label>
         <div class="input-group mb-3 fade-in">
             <div class="input-group-prepend">
-                <span class="input-group-text"><i class="icon icon-lock" aria-hidden="true"></i></span>
+                <span class="input-group-text"><i class="icon-lock" aria-hidden="true"></i></span>
             </div>
             {% render_field form.new_password2 name='new_password2' class+='form-control' id='password2-input-group' %}
         </div>
