--- a/babybuddy/templates/registration/password_reset_form.html
+++ b/babybuddy/templates/registration/password_reset_form.html
@@ -22,7 +22,7 @@
         </label>
         <div class="input-group mb-3 fade-in">
             <div class="input-group-prepend">
-                <span class="input-group-text"><i class="icon icon-envelope" aria-hidden="true"></i></span>
+                <span class="input-group-text"><i class="icon-envelope" aria-hidden="true"></i></span>
             </div>
             {% render_field form.email name='email' class+='form-control' id='email-input-group' placeholder=form.email.label %}
         </div>
