--- a/dashboard/templates/cards/statistics.html
+++ b/dashboard/templates/cards/statistics.html
@@ -3,7 +3,7 @@
 {% if not empty or not hide_empty %}
     <div class="card card-dashboard card-statistics">
         <div class="card-header">
-            <i class="icon icon-graph pull-left" aria-hidden="true"></i>
+            <i class="icon-graph pull-left" aria-hidden="true"></i>
             {% trans "Statistics" %}
         </div>
         <div class="card-body text-center">
