--- a/reports/templates/reports/report_base.html
+++ b/reports/templates/reports/report_base.html
@@ -15,9 +15,9 @@
             {{ html|safe }}
         {% else %}
             <div class="jumbotron text-center">
-                <i class="icon icon-sad" aria-hidden="true"></i>
+                <i class="icon-sad" aria-hidden="true"></i>
                 {% trans "There is not enough data to generate this report." %}
-                <i class="icon icon-sad" aria-hidden="true"></i>
+                <i class="icon-sad" aria-hidden="true"></i>
             </div>
         {% endif %}
     </div>
