--- a/babybuddy/templates/babybuddy/nav-dropdown.html
+++ b/babybuddy/templates/babybuddy/nav-dropdown.html
@@ -12,7 +12,7 @@
             <div>
                 <a class="text-success"
                     href="{% url 'core:timeline' %}"
-                    aria-expanded="false"><i class="icon icon-2x icon-timeline" aria-hidden="true"></i>
+                    aria-expanded="false"><i class="icon-2x icon-timeline" aria-hidden="true"></i>
                 </a>
                 &nbsp;
             </div>
@@ -20,7 +20,7 @@
                 {% csrf_token %}
                 <label class="sr-only">{% trans "Quick Start Timer" %}</label>
                 <button class="btn m-0 p-0 text-success">
-                    <i class="icon icon-2x icon-timer" aria-hidden="true"></i>
+                    <i class="icon-2x icon-timer" aria-hidden="true"></i>
                 </button>
             </form>
             <div class="dropdown show">
@@ -30,49 +30,49 @@
                    id="nav-quick-add-link"
                    data-toggle="dropdown"
                    aria-haspopup="true"
-                   aria-expanded="false"><i class="icon icon-2x icon-add" aria-hidden="true"></i>
+                   aria-expanded="false"><i class="icon-2x icon-add" aria-hidden="true"></i>
                 </a>
 
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="nav-quick-add-link">
                     {% if perms.core.add_diaperchange %}
                         <a class="dropdown-item p-2" href="{% url 'core:diaperchange-add' %}">
-                            <i class="icon icon-diaperchange" aria-hidden="true"></i>
+                            <i class="icon-diaperchange" aria-hidden="true"></i>
                             {% trans "Diaper Change" %}
                         </a>
                     {% endif %}
                     {% if perms.core.add_feeding %}
                         <a class="dropdown-item p-2" href="{% url 'core:feeding-add' %}">
-                            <i class="icon icon-feeding" aria-hidden="true"></i>
+                            <i class="icon-feeding" aria-hidden="true"></i>
                             {% trans "Feeding" %}
                         </a>
                     {% endif %}
                     {% if perms.core.add_note %}
                         <a class="dropdown-item p-2" href="{% url 'core:note-add' %}">
-                            <i class="icon icon-note" aria-hidden="true"></i>
+                            <i class="icon-note" aria-hidden="true"></i>
                             {% trans "Note" %}
                         </a>
                     {% endif %}
                     {% if perms.core.add_sleep %}
                         <a class="dropdown-item p-2" href="{% url 'core:sleep-add' %}">
-                            <i class="icon icon-sleep" aria-hidden="true"></i>
+                            <i class="icon-sleep" aria-hidden="true"></i>
                             {% trans "Sleep" %}
                         </a>
                     {% endif %}
                     {% if perms.core.add_temperature %}
                         <a class="dropdown-item p-2" href="{% url 'core:temperature-add' %}">
-                            <i class="icon icon-temperature" aria-hidden="true"></i>
+                            <i class="icon-temperature" aria-hidden="true"></i>
                             {% trans "Temperature" %}
                         </a>
                     {% endif %}
                     {% if perms.core.add_tummytime %}
                         <a class="dropdown-item p-2" href="{% url 'core:tummytime-add' %}">
-                            <i class="icon icon-tummytime" aria-hidden="true"></i>
+                            <i class="icon-tummytime" aria-hidden="true"></i>
                             {% trans "Tummy Time" %}
                         </a>
                     {% endif %}
                     {% if perms.core.add_weight %}
                         <a class="dropdown-item p-2" href="{% url 'core:weight-add' %}">
-                            <i class="icon icon-weight" aria-hidden="true"></i>
+                            <i class="icon-weight" aria-hidden="true"></i>
                             {% trans "Weight" %}
                         </a>
                     {% endif %}
@@ -91,14 +91,14 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item{% if request.path == '/' %} active{% endif %}">
                     <a class="nav-link" href="{% url 'dashboard:dashboard' %}">
-                        <i class="icon icon-dashboard" aria-hidden="true"></i>
+                        <i class="icon-dashboard" aria-hidden="true"></i>
                         {% trans "Dashboard" %}
                     </a>
                 </li>
 
                 <li class="nav-item{% if request.path == '/timeline' %} active{% endif %}">
                     <a class="nav-link" href="{% url 'core:timeline' %}">
-                        <i class="icon icon-timeline" aria-hidden="true"></i>
+                        <i class="icon-timeline" aria-hidden="true"></i>
                         {% trans "Timeline" %}
                     </a>
                 </li>
@@ -109,7 +109,7 @@
                        href="#"
                        data-toggle="dropdown"
                        aria-haspopup="true"
-                       aria-expanded="false"><i class="icon icon-child" aria-hidden="true"></i>
+                       aria-expanded="false"><i class="icon-child" aria-hidden="true"></i>
                         {% trans "Children" %}
                     </a>
                     <div class="dropdown-menu" aria-labelledby="nav-children-menu-link">
@@ -117,13 +117,13 @@
                         {% if perms.core.view_child %}
                             <a class="dropdown-item{% if request.path == '/children/' %} active{% endif %}"
                                href="{% url 'core:child-list' %}">
-                                <i class="icon icon-child" aria-hidden="true"></i>
+                                <i class="icon-child" aria-hidden="true"></i>
                                 {% trans "Children" %}
                             </a>
                         {% endif %}
                         {% if perms.core.add_child %}
                             <a class="dropdown-item pl-5{% if request.path == '/children/add/' %} active{% endif %}"
-                               href="{% url 'core:child-add' %}"><i class="icon icon-add" aria-hidden="true"></i>
+                               href="{% url 'core:child-add' %}"><i class="icon-add" aria-hidden="true"></i>
                                 {% trans "Child" %}
                             </a>
                         {% endif %}
@@ -131,13 +131,13 @@
                         {% if perms.core.view_note %}
                             <a class="dropdown-item{% if request.path == '/notes/' %} active{% endif %}"
                                href="{% url 'core:note-list' %}">
-                                <i class="icon icon-note" aria-hidden="true"></i>
+                                <i class="icon-note" aria-hidden="true"></i>
                                 {% trans "Notes" %}
                             </a>
                         {% endif %}
                         {% if perms.core.add_note %}
                             <a class="dropdown-item pl-5{% if request.path == '/notes/add/' %} active{% endif %}"
-                               href="{% url 'core:note-add' %}"><i class="icon icon-add" aria-hidden="true"></i>
+                               href="{% url 'core:note-add' %}"><i class="icon-add" aria-hidden="true"></i>
                                 {% trans "Note" %}
                             </a>
                         {% endif %}
@@ -145,13 +145,13 @@
                         {% if perms.core.view_temperature %}
                             <a class="dropdown-item{% if request.path == '/temperature/' %} active{% endif %}"
                                href="{% url 'core:temperature-list' %}">
-                                <i class="icon icon-temperature" aria-hidden="true"></i>
+                                <i class="icon-temperature" aria-hidden="true"></i>
                                 {% trans "Temperature" %}
                             </a>
                         {% endif %}
                         {% if perms.core.add_temperature %}
                             <a class="dropdown-item pl-5{% if request.path == '/temperature/add/' %} active{% endif %}"
-                               href="{% url 'core:temperature-add' %}"><i class="icon icon-add" aria-hidden="true"></i>
+                               href="{% url 'core:temperature-add' %}"><i class="icon-add" aria-hidden="true"></i>
                                 {% trans "Temperature reading" %}
                             </a>
                         {% endif %}
@@ -159,13 +159,13 @@
                         {% if perms.core.view_weight %}
                             <a class="dropdown-item{% if request.path == '/weight/' %} active{% endif %}"
                                href="{% url 'core:weight-list' %}">
-                                <i class="icon icon-weight" aria-hidden="true"></i>
+                                <i class="icon-weight" aria-hidden="true"></i>
                                 {% trans "Weight" %}
                             </a>
                         {% endif %}
                         {% if perms.core.add_weight %}
                             <a class="dropdown-item pl-5{% if request.path == '/weight/add/' %} active{% endif %}"
-                               href="{% url 'core:weight-add' %}"><i class="icon icon-add" aria-hidden="true"></i>
+                               href="{% url 'core:weight-add' %}"><i class="icon-add" aria-hidden="true"></i>
                                 {% trans "Weight entry" %}
                             </a>
                         {% endif %}
@@ -179,59 +179,59 @@
                        href="#"
                        data-toggle="dropdown"
                        aria-haspopup="true"
-                       aria-expanded="false"><i class="icon icon-activities" aria-hidden="true"></i>
+                       aria-expanded="false"><i class="icon-activities" aria-hidden="true"></i>
                         {% trans "Activities" %}
                     </a>
                     <div class="dropdown-menu" aria-labelledby="nav-activity-menu-link">
 
                         {% if perms.core.view_diaperchange %}
                             <a class="dropdown-item{% if request.path == '/changes/' %} active{% endif %}"
-                               href="{% url 'core:diaperchange-list' %}"><i class="icon icon-diaperchange" aria-hidden="true"></i>
+                               href="{% url 'core:diaperchange-list' %}"><i class="icon-diaperchange" aria-hidden="true"></i>
                                 {% trans "Changes" %}
                             </a>
                         {% endif %}
                         {% if perms.core.add_diaperchange %}
                             <a class="dropdown-item pl-5{% if request.path == '/changes/add/' %} active{% endif %}"
-                               href="{% url 'core:diaperchange-add' %}"><i class="icon icon-add" aria-hidden="true"></i>
+                               href="{% url 'core:diaperchange-add' %}"><i class="icon-add" aria-hidden="true"></i>
                                 {% trans "Change" %}
                             </a>
                         {% endif %}
 
                         {% if perms.core.view_feeding %}
                             <a class="dropdown-item{% if request.path == '/feedings/' %} active{% endif %}"
-                               href="{% url 'core:feeding-list' %}"><i class="icon icon-feeding" aria-hidden="true"></i>
+                               href="{% url 'core:feeding-list' %}"><i class="icon-feeding" aria-hidden="true"></i>
                                 {% trans "Feedings" %}
                             </a>
                         {% endif %}
                         {% if perms.core.add_diaperchange %}
                             <a class="dropdown-item pl-5{% if request.path == '/feedings/add/' %} active{% endif %}"
-                               href="{% url 'core:feeding-add' %}"><i class="icon icon-add" aria-hidden="true"></i>
+                               href="{% url 'core:feeding-add' %}"><i class="icon-add" aria-hidden="true"></i>
                                 {% trans "Feeding" %}
                             </a>
                         {% endif %}
 
                         {% if perms.core.view_sleep %}
                             <a class="dropdown-item{% if request.path == '/sleep/' %} active{% endif %}"
-                               href="{% url 'core:sleep-list' %}"><i class="icon icon-sleep" aria-hidden="true"></i>
+                               href="{% url 'core:sleep-list' %}"><i class="icon-sleep" aria-hidden="true"></i>
                                 {% trans "Sleep" %}
                             </a>
                         {% endif %}
                         {% if perms.core.add_sleep %}
                             <a class="dropdown-item pl-5{% if request.path == '/sleep/add/' %} active{% endif %}"
-                               href="{% url 'core:sleep-add' %}"><i class="icon icon-add" aria-hidden="true"></i>
+                               href="{% url 'core:sleep-add' %}"><i class="icon-add" aria-hidden="true"></i>
                                 {% trans "Sleep entry" %}
                             </a>
                         {% endif %}
 
                         {% if perms.core.view_tummytime %}
                             <a class="dropdown-item{% if request.path == '/tummy-time/' %} active{% endif %}"
-                               href="{% url 'core:tummytime-list' %}"><i class="icon icon-tummytime" aria-hidden="true"></i>
+                               href="{% url 'core:tummytime-list' %}"><i class="icon-tummytime" aria-hidden="true"></i>
                                 {% trans "Tummy Time" %}
                             </a>
                         {% endif %}
                         {% if perms.core.add_tummytime %}
                             <a class="dropdown-item pl-5{% if request.path == '/tummy-time/add/' %} active{% endif %}"
-                               href="{% url 'core:tummytime-add' %}"><i class="icon icon-add" aria-hidden="true"></i>
+                               href="{% url 'core:tummytime-add' %}"><i class="icon-add" aria-hidden="true"></i>
                                 {% trans "Tummy Time entry" %}
                             </a>
                         {% endif %}
@@ -253,7 +253,7 @@
                            data-toggle="dropdown"
                            aria-haspopup="true"
                            aria-expanded="false">
-                            <i class="icon icon-user" aria-hidden="true"></i>
+                            <i class="icon-user" aria-hidden="true"></i>
                             {% firstof user.get_full_name user.get_username %}
                         </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="nav-user-menu-link">
@@ -273,11 +273,11 @@
                             <a href="https://github.com/babybuddy/babybuddy"
                                class="dropdown-item"
                                target="_blank">
-                                <i class="icon icon-source" aria-hidden="true"></i> {% trans "Source Code" %}</a>
+                                <i class="icon-source" aria-hidden="true"></i> {% trans "Source Code" %}</a>
                             <a href="https://gitter.im/babybuddy/Lobby"
                                class="dropdown-item"
                                target="_blank">
-                                <i class="icon icon-chat" aria-hidden="true"></i> {% trans "Chat / Support" %}</a>
+                                <i class="icon-chat" aria-hidden="true"></i> {% trans "Chat / Support" %}</a>
                             <h6 class="dropdown-header">v{% version_string %}</h6>
                         </div>
                     </li>
