--- a/core/templates/core/child_list.html
+++ b/core/templates/core/child_list.html
@@ -12,7 +12,7 @@
         {% trans "Children" %}
         {% if perms.core.add_child %}
             <a href="{% url 'core:child-add' %}" class="btn btn-sm btn-success">
-                <i class="icon icon-child" aria-hidden="true"></i> {% trans "Add Child" %}
+                <i class="icon-child" aria-hidden="true"></i> {% trans "Add Child" %}
             </a>
         {% endif %}
     </h1>
@@ -21,7 +21,7 @@
         <table class="table table-striped table-hover child-list">
             <thead class="thead-inverse">
                 <tr>
-                    <th class="picture-column"><i class="icon icon-camera" aria-hidden="true"></i></th>
+                    <th class="picture-column"><i class="icon-camera" aria-hidden="true"></i></th>
                     <th>{% trans "First Name" %}</th>
                     <th>{% trans "Last Name" %}</th>
                     <th>{% trans "Birth Date" %}</th>
@@ -49,13 +49,13 @@
 
                                 {% if perms.core.change_child %}
                                     <a href="{% url 'core:child-update' child.slug %}" class="btn btn-warning">
-                                        <i class="icon icon-update" aria-hidden="true"></i>
+                                        <i class="icon-update" aria-hidden="true"></i>
                                     </a>
                                 {% endif %}
 
                                 {% if perms.core.delete_child %}
                                     <a href="{% url 'core:child-delete' child.slug %}" class="btn btn-danger">
-                                        <i class="icon icon-delete" aria-hidden="true"></i>
+                                        <i class="icon-delete" aria-hidden="true"></i>
                                     </a>
                                 {% endif %}
 
