--- a/core/templates/core/timer_detail.html
+++ b/core/templates/core/timer_detail.html
@@ -39,7 +39,7 @@
         {% if perms.core.add_feeding %}
             <a class="btn btn-success btn-lg btn-block mb-3"
                href="{% instance_add_url 'core:feeding-add' %}"
-               role="button"><i class="icon icon-feeding" aria-hidden="true"></i>
+               role="button"><i class="icon-feeding" aria-hidden="true"></i>
                 {% trans "Feeding" %}
             </a>
         {% endif %}
@@ -47,7 +47,7 @@
         {% if perms.core.add_sleep %}
             <a class="btn btn-success btn-lg btn-block mb-3"
                href="{% instance_add_url 'core:sleep-add' %}"
-               role="button"><i class="icon icon-sleep" aria-hidden="true"></i>
+               role="button"><i class="icon-sleep" aria-hidden="true"></i>
                 {% trans "Sleep" %}
             </a>
         {% endif %}
@@ -55,7 +55,7 @@
         {% if perms.core.add_tummytime %}
             <a class="btn btn-success btn-lg btn-block mb-3"
                href="{% instance_add_url 'core:tummytime-add' %}"
-               role="button"><i class="icon icon-tummytime" aria-hidden="true"></i>
+               role="button"><i class="icon-tummytime" aria-hidden="true"></i>
                 {% trans "Tummy Time" %}
             </a>
         {% endif %}
@@ -64,25 +64,25 @@
             {% if perms.core.delete_timer %}
                 <a class="btn btn-lg btn-danger"
                    href="{% url 'core:timer-delete' timer.id %}"
-                   role="button"><i class="icon icon-delete" aria-hidden="true"></i></a>
+                   role="button"><i class="icon-delete" aria-hidden="true"></i></a>
             {% endif %}
 
             {% if perms.core.change_timer %}
                 <a class="btn btn-lg btn-primary"
                    href="{% url 'core:timer-update' timer.id %}"
-                   role="button"><i class="icon icon-update" aria-hidden="true"></i></a>
+                   role="button"><i class="icon-update" aria-hidden="true"></i></a>
 
                 <form action="{% url 'core:timer-restart' timer.id %}" role="form" method="post" class="d-inline">
                     {% csrf_token %}
                     <label class="sr-only">{% trans "Restart timer" %}</label>
-                    <button type="submit" class="btn btn-lg btn-secondary"><i class="icon icon-refresh" aria-hidden="true"></i></button>
+                    <button type="submit" class="btn btn-lg btn-secondary"><i class="icon-refresh" aria-hidden="true"></i></button>
                 </form>
 
                 {% if object.active %}
                     <form action="{% url 'core:timer-stop' timer.id %}" role="form" method="post" class="d-inline">
                         {% csrf_token %}
                         <label class="sr-only">{% trans "Delete timer" %}</label>
-                        <button type="submit" class="btn btn-lg btn-warning"><i class="icon icon-stop" aria-hidden="true"></i></button>
+                        <button type="submit" class="btn btn-lg btn-warning"><i class="icon-stop" aria-hidden="true"></i></button>
                     </form>
                 {% endif %}
             {% endif %}
