--- a/core/templates/core/tummytime_list.html
+++ b/core/templates/core/tummytime_list.html
@@ -12,7 +12,7 @@
         {% trans "Tummy Time" %}
         {% if perms.core.add_tummytime %}
             <a href="{% url 'core:tummytime-add' %}" class="btn btn-sm btn-success">
-                <i class="icon icon-tummytime" aria-hidden="true"></i> {% trans "Add Tummy Time" %}</a>
+                <i class="icon-tummytime" aria-hidden="true"></i> {% trans "Add Tummy Time" %}</a>
         {% endif %}
     </h1>
     {% include 'babybuddy/filter.html' %}
@@ -38,13 +38,13 @@
 
                                 {% if perms.core.change_tummytime %}
                                     <a href="{% url 'core:tummytime-update' tummytime.id %}" class="btn btn-primary">
-                                        <i class="icon icon-update" aria-hidden="true"></i>
+                                        <i class="icon-update" aria-hidden="true"></i>
                                     </a>
                                 {% endif %}
 
                                 {% if perms.core.delete_tummytime %}
                                     <a href="{% url 'core:tummytime-delete' tummytime.id %}" class="btn btn-danger">
-                                        <i class="icon icon-delete" aria-hidden="true"></i>
+                                        <i class="icon-delete" aria-hidden="true"></i>
                                     </a>
                                 {% endif %}
 
