--- a/core/templates/core/weight_list.html
+++ b/core/templates/core/weight_list.html
@@ -12,7 +12,7 @@
         {% trans "Weight" %}
         {% if perms.core.add_weight %}
             <a href="{% url 'core:weight-add' %}" class="btn btn-sm btn-success">
-                <i class="icon icon-weight" aria-hidden="true"></i> {% trans "Add Weight" %}
+                <i class="icon-weight" aria-hidden="true"></i> {% trans "Add Weight" %}
             </a>
         {% endif %}
     </h1>
@@ -38,13 +38,13 @@
 
                                 {% if perms.core.change_weight %}
                                     <a href="{% url 'core:weight-update' weight.id %}" class="btn btn-primary">
-                                        <i class="icon icon-update" aria-hidden="true"></i>
+                                        <i class="icon-update" aria-hidden="true"></i>
                                     </a>
                                 {% endif %}
 
                                 {% if perms.core.delete_weight %}
                                     <a href="{% url 'core:weight-delete' weight.id %}" class="btn btn-danger">
-                                        <i class="icon icon-delete" aria-hidden="true"></i>
+                                        <i class="icon-delete" aria-hidden="true"></i>
                                     </a>
                                 {% endif %}
 
@@ -58,7 +58,7 @@
                     </tr>
                     {% if weight.notes %}
                         <tr class="{{ row_class }} row-details">
-                            <td colspan="4"><i class="icon icon-note mr-2" aria-hidden="true"></i>{{ weight.notes }}</td>
+                            <td colspan="4"><i class="icon-note mr-2" aria-hidden="true"></i>{{ weight.notes }}</td>
                         </tr>
                     {% endif %}
                 {% empty %}
