--- a/dashboard/templates/cards/base.html
+++ b/dashboard/templates/cards/base.html
@@ -1,7 +1,7 @@
 {% if not empty or not hide_empty %}
     <div class="card card-dashboard card-{{ type }}">
         <div class="card-header">
-            <i class="icon icon-{{ type }} pull-left" aria-hidden="true"></i>
+            <i class="icon-{{ type }} pull-left" aria-hidden="true"></i>
             {% block header %}{% endblock %}
         </div>
         <div class="card-body">
