--- a/babybuddy/static_src/fontello/css/babybuddy.css
+++ b/babybuddy/static_src/fontello/css/babybuddy.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'babybuddy';
-  src: url('../font/babybuddy.eot?96007206');
-  src: url('../font/babybuddy.eot?96007206#iefix') format('embedded-opentype'),
-       url('../font/babybuddy.woff2?96007206') format('woff2'),
-       url('../font/babybuddy.woff?96007206') format('woff'),
-       url('../font/babybuddy.ttf?96007206') format('truetype'),
-       url('../font/babybuddy.svg?96007206#babybuddy') format('svg');
+  src: url('../font/babybuddy.eot?50987853');
+  src: url('../font/babybuddy.eot?50987853#iefix') format('embedded-opentype'),
+       url('../font/babybuddy.woff2?50987853') format('woff2'),
+       url('../font/babybuddy.woff?50987853') format('woff'),
+       url('../font/babybuddy.ttf?50987853') format('truetype'),
+       url('../font/babybuddy.svg?50987853#babybuddy') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'babybuddy';
-    src: url('../font/babybuddy.svg?96007206#babybuddy') format('svg');
+    src: url('../font/babybuddy.svg?50987853#babybuddy') format('svg');
   }
 }
 */
@@ -77,7 +77,7 @@
 .icon-angle-circled-right:before { content: '\f138'; } /* '' */
 .icon-child:before { content: '\f1ae'; } /* '' */
 .icon-feeding:before { content: '\f1b1'; } /* '' */
-.icon-activites:before { content: '\f1b3'; } /* '' */
+.icon-activities:before { content: '\f1b3'; } /* '' */
 .icon-timeline:before { content: '\f1da'; } /* '' */
 .icon-diaperchange:before { content: '\f1f8'; } /* '' */
 .icon-sleep:before { content: '\f236'; } /* '' */
