--- a/babybuddy/static_src/fontello/css/babybuddy-codes.css
+++ b/babybuddy/static_src/fontello/css/babybuddy-codes.css
@@ -22,7 +22,7 @@
 .icon-angle-circled-right:before { content: '\f138'; } /* '' */
 .icon-child:before { content: '\f1ae'; } /* '' */
 .icon-feeding:before { content: '\f1b1'; } /* '' */
-.icon-activites:before { content: '\f1b3'; } /* '' */
+.icon-activities:before { content: '\f1b3'; } /* '' */
 .icon-timeline:before { content: '\f1da'; } /* '' */
 .icon-diaperchange:before { content: '\f1f8'; } /* '' */
 .icon-sleep:before { content: '\f236'; } /* '' */
