Fix refresh icon name

--- a/babybuddy/static_src/fontello/css/babybuddy-codes.css
+++ b/babybuddy/static_src/fontello/css/babybuddy-codes.css
@@ -8,7 +8,7 @@
 .icon-graph:before { content: '\e806'; } /* '' */
 .icon-list:before { content: '\e807'; } /* '' */
 .icon-lock:before { content: '\e808'; } /* '' */
-.icon-arrows-cw:before { content: '\e809'; } /* '' */
+.icon-refresh:before { content: '\e809'; } /* '' */
 .icon-stop:before { content: '\e80a'; } /* '' */
 .icon-timer:before { content: '\e80b'; } /* '' */
 .icon-true:before { content: '\e80c'; } /* '' */
