--- a/static/babybuddy/css/app.css
+++ b/static/babybuddy/css/app.css
@@ -10771,8 +10771,8 @@ h3 {
 }
 @font-face {
   font-family: "babybuddy";
-  src: url("../font/babybuddy.eot?50987853");
-  src: url("../font/babybuddy.eot?50987853#iefix") format("embedded-opentype"), url("../font/babybuddy.woff2?50987853") format("woff2"), url("../font/babybuddy.woff?50987853") format("woff"), url("../font/babybuddy.ttf?50987853") format("truetype"), url("../font/babybuddy.svg?50987853#babybuddy") format("svg");
+  src: url("../font/babybuddy.eot?22684922");
+  src: url("../font/babybuddy.eot?22684922#iefix") format("embedded-opentype"), url("../font/babybuddy.woff2?22684922") format("woff2"), url("../font/babybuddy.woff?22684922") format("woff"), url("../font/babybuddy.ttf?22684922") format("truetype"), url("../font/babybuddy.svg?22684922#babybuddy") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -10782,7 +10782,7 @@ h3 {
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'babybuddy';
-    src: url('../font/babybuddy.svg?50987853#babybuddy') format('svg');
+    src: url('../font/babybuddy.svg?22684922#babybuddy') format('svg');
   }
 }
 */
@@ -10859,7 +10859,7 @@ h3 {
 }
 
 /* '' */
-.icon-arrows-cw:before {
+.icon-refresh:before {
   content: "";
 }
 
