--- a/babybuddy/static_src/fontello/css/babybuddy.css
+++ b/babybuddy/static_src/fontello/css/babybuddy.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'babybuddy';
-  src: url('../font/babybuddy.eot?50987853');
-  src: url('../font/babybuddy.eot?50987853#iefix') format('embedded-opentype'),
-       url('../font/babybuddy.woff2?50987853') format('woff2'),
-       url('../font/babybuddy.woff?50987853') format('woff'),
-       url('../font/babybuddy.ttf?50987853') format('truetype'),
-       url('../font/babybuddy.svg?50987853#babybuddy') format('svg');
+  src: url('../font/babybuddy.eot?22684922');
+  src: url('../font/babybuddy.eot?22684922#iefix') format('embedded-opentype'),
+       url('../font/babybuddy.woff2?22684922') format('woff2'),
+       url('../font/babybuddy.woff?22684922') format('woff'),
+       url('../font/babybuddy.ttf?22684922') format('truetype'),
+       url('../font/babybuddy.svg?22684922#babybuddy') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'babybuddy';
-    src: url('../font/babybuddy.svg?50987853#babybuddy') format('svg');
+    src: url('../font/babybuddy.svg?22684922#babybuddy') format('svg');
   }
 }
 */
@@ -63,7 +63,7 @@
 .icon-graph:before { content: '\e806'; } /* '' */
 .icon-list:before { content: '\e807'; } /* '' */
 .icon-lock:before { content: '\e808'; } /* '' */
-.icon-arrows-cw:before { content: '\e809'; } /* '' */
+.icon-refresh:before { content: '\e809'; } /* '' */
 .icon-stop:before { content: '\e80a'; } /* '' */
 .icon-timer:before { content: '\e80b'; } /* '' */
 .icon-true:before { content: '\e80c'; } /* '' */
